--- a/Info.plist.in
+++ b/Info.plist.in
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" 
-  "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+    "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+
 <plist version="1.0">
 <dict>
-  <key>CFBundleExecutable</key>
-  <string>@EXECUTABLE_NAME@</string>
-  <key>CFBundleIdentifier</key>
-  <string>com.yourdomain.@EXECUTABLE_NAME@</string>
-  <key>CFBundleName</key>
-  <string>@EXECUTABLE_NAME@</string>
-  <key>CFBundleVersion</key>
-  <string>1.0</string>
+    <key>CFBundleExecutable</key>
+    <string>@EXECUTABLE_NAME@</string>
+
+    <key>CFBundleIdentifier</key>
+    <string>com.nigelloh.terminalai</string>
+
+    <key>CFBundleName</key>
+    <string>TerminalAI</string>
+
+    <key>CFBundleDisplayName</key>
+    <string>TerminalAI</string>
+
+    <key>CFBundleVersion</key>
+    <string>1.0</string>
+
+    <key>CFBundleShortVersionString</key>
+    <string>1.0</string>
+
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
+
+    <key>NSHighResolutionCapable</key>
+    <true/>
+
+    <key>LSMinimumSystemVersion</key>
+    <string>10.14</string>
 </dict>
 </plist>
